clusters/belacca-production/mutandae/network-policy-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mutandae-postgres-traffic
  namespace: mutandae
  labels:
    belacca.com/project: mutandae
    belacca.com/component: network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mutandae-postgres
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values: [mutandae, mutandae-preview]
      ports:
        - protocol: TCP
          port: 5432
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
